--- a/frontend-user/src/layout/header/header.scss
+++ b/frontend-user/src/layout/header/header.scss
@@ -1884,7 +1884,141 @@ tr {
 }
 
 .page-item {
-    .page-link {
-      color: #212529;
+  .page-link {
+    color: #212529;
+  }
+}
+
+.open-popup-button {
+  background-color: white;
+  color: rgb(15, 49, 202);
+  border: none;
+  font-size: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    // background-color: #45a049;
+  }
+
+
+}
+input[type="checkbox"] {
+  transform: scale(1.5); /* Tăng kích thước lên 1.5 lần */
+  accent-color: rgb(50, 85, 238);
+}
+
+// Overlay của popup
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+// Nội dung của popup
+.popup-content {
+  position: relative;
+
+  background-color: white;
+  width: 70%;
+  // max-width: 600px;
+  max-height: 80%;
+
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+  .tieude {
+    padding: 20px;
+    box-shadow: 0px 1px 6px #dddada;
+  }
+
+  h2,
+  h3,
+  p {
+    padding: 0;
+    margin: 0;
+    max-width: 100%; // Đảm bảo không vượt giới hạn chiều rộng
+    white-space: pre-wrap; // Cho phép xuống dòng
+  }
+
+  p {
+    font-weight: 400;
+  }
+
+  img {
+    max-width: 100%; // Giới hạn kích thước hình ảnh
+    height: auto;
+  }
+
+  .content-view {
+    padding: 20px 20px 120px 20px;
+
+    // padding-bottom: 50px;
+    text-align: left;
+    overflow-y: auto;
+    overflow-x: hidden; // Ngăn cuộn ngang
+    width: 100%;
+    // height: 100%;
+    height: 60vh;
+
+    word-wrap: break-word; // Đảm bảo xuống dòng nếu từ quá dài
+    overflow-wrap: break-word; // Hỗ trợ tốt hơn trên nhiều trình duyệt
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+}
+
+// Nút đóng popup
+
+.btn-view {
+  border-radius: 0px 0px 10px 10px;
+
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: flex-end;
+  box-shadow: 0px 0px 6px 1px #dddada;
+  .close-popup-button {
+    // background-color: #f44336;
+    color: #f44336;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin: 10px 20px;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: #d32f2f;
+      color: white;
     }
   }
+
+  .agree-popup-button {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin: 10px 20px;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: #d32f2f;
+    }
+  }
+}
