--- a/frontend-user/src/layout/header/header.scss
+++ b/frontend-user/src/layout/header/header.scss
@@ -746,6 +746,11 @@ a {
 }
 .listsize {
   margin-top: 10px;
+  display: flex;
+  gap: 10px;
+  grid-template-rows: repeat(1, 1fr);
+  margin-bottom: 30px;
+  // box-sizing: border-box;
   // background-color: red;
 }
 // .color-item{
@@ -1064,6 +1069,12 @@ a {
 }
 .storagedetail {
   font-size: 10px;
+}
+
+.sanphamcon{
+  position: absolute;
+  left: 0;
+  bottom: -27px;
 }
 .positionrelative {
   position: relative;
@@ -2021,4 +2032,13 @@ input[type="checkbox"] {
       background-color: #d32f2f;
     }
   }
+}
+
+.delete-btn{
+  color: rgb(255, 255, 255);
+  background-color: red;
+  border: none;
+  border-radius: 6px;
+  display: flex;
+  padding: 10px;
 }
