--- a/admin-fe/src/layout/admin/layout.scss
+++ b/admin-fe/src/layout/admin/layout.scss
@@ -948,3 +948,53 @@
     width: 100%;
   }
 }
+
+.invoice-container {
+  padding: 20px;
+  background-color: #fff;
+  width: 210mm;
+  height: 297mm;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  font-family: Arial, sans-serif;
+}
+
+.invoice-header {
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.invoice-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.invoice-table th,
+.invoice-table td {
+  border: 1px solid black;
+  padding: 8px;
+  text-align: left;
+}
+
+.invoice-total {
+  margin-top: 20px;
+  text-align: right;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.invoice-date {
+  font-size: 14px;
+  color: #666;
+}
+
+.imganhnodata{
+  width: 100%;
+  height: 100%;
+
+}
+
